<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/gradient_rect">

    <TextView
        android:id="@+id/event_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/event_detail_tags"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginStart="35dp"
        />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/event_detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/event_date"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/event_detail_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_detail_date"
            android:text="@string/event_start_time"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/event_detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_detail_time"
            android:text="@string/event_location"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/event_detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_detail_location"
            android:text="@string/event_price"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/event_detail_description_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/description"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/event_description"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/event_detail_description_tag"
            app:layout_constraintTop_toBottomOf="@id/event_detail_description_tag"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/montserrat"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="20dp"
        android:text="@string/event_also_attending"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/event_also_attending_profile_pic"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/event_detail_register_button"
        android:layout_width="208dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_gradient_blue"
        android:elevation="2dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/event_register"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="bold"

        />




</LinearLayout>