<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_rect"
    tools:context=".social.UserDetailsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="238dp"
        android:layout_marginBottom="549dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:src="@drawable/selfie"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="3dp" />

    <TextView
        android:id="@+id/fieldUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_pic"
        android:layout_marginStart="190dp"
        android:layout_marginTop="-670dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        android:textSize="16pt"
        android:textStyle="bold" />

    <!--If company name too long, might
    need to change font size ie give a condition-->
    <TextView
        android:id="@+id/designation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="190dp"
        android:layout_marginTop="105dp"
        android:text="@string/designation"
        android:textColor="#FFFFFF"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="190dp"
        android:layout_marginTop="125dp"
        android:text="@string/company"
        android:textColor="#FFFFFF"
        android:textSize="8pt" />


    <TextView
        android:id="@+id/bio"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="230dp"
        android:text="@string/bio"
        android:textColor="#FFFFFF"
        android:textSize="7pt" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="200dp"
        android:text="@string/description"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/pastEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="525dp"
        android:text="@string/pastEvents"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="8pt" />

    <include layout="@layout/user_interest_list" />



</RelativeLayout>
