<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_social_small_card">
    <!-- tools:showIn="@layout/fragment_social"-->

    <android.support.v7.widget.CardView
        android:id="@+id/recentConnection_view1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"

        app:cardCornerRadius="15dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/small_card_profile_pic"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:src="@drawable/selfie"
                app:civ_border_color="#474BAC"
                app:civ_border_width="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/small_card_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/username"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_below="@+id/small_card_profile_pic"
                android:layout_marginTop="-3dp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/small_card_designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/designation"
                android:textColor="#474BAC"
                android:layout_below="@+id/small_card_username"
                android:textSize="6sp"
                android:layout_marginTop="-3dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/small_card_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/company"
                android:textColor="#474BAC"
                android:textSize="6sp"
                android:layout_below="@+id/small_card_designation"
                android:layout_centerHorizontal="true"
                />

            <Button
                android:id="@+id/card_view_profile"
                android:layout_width="70dp"
                android:layout_height="13dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/small_card_company"
                android:text="@string/viewProfile"
                android:textSize="5sp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/montserrat"
                android:textAllCaps="false"
                android:background="@drawable/button_outline_grad"
                />





        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>