<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_social_card">
    <!-- tools:showIn="@layout/fragment_social"-->

    <android.support.v7.widget.CardView
        android:id="@+id/recentConnection_view1"
        android:layout_width="320dp"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="15dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="2dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/card_profile_pic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"

                android:layout_marginTop="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="59dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:src="@drawable/selfie"
                app:civ_border_color="#474BAC"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toStartOf="@+id/fieldUsername"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/username"
                android:textColor="#000000"
                android:textSize="25sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/card_profile_pic"
                app:layout_constraintTop_toTopOf="@id/card_profile_pic"
                android:layout_alignTop="@+id/card_profile_pic"
                />

            <TextView
                android:id="@+id/card_designation"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:fontFamily="@font/montserrat"
                app:layout_constraintStart_toEndOf="@id/card_profile_pic"
                app:layout_constraintTop_toBottomOf="@id/card_username"
                android:layout_marginStart="10dp"
                android:text="@string/designation"
                android:textColor="#474BAC"
                android:textSize="15sp"
                android:layout_marginTop="0dp"
                android:layout_alignTop="@+id/card_username"
                />

            <TextView
                android:id="@+id/card_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/company"
                android:textColor="#474BAC"
                app:layout_constraintStart_toEndOf="@id/card_profile_pic"
                app:layout_constraintTop_toBottomOf="@id/card_designation"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:layout_alignTop="@+id/card_designation"
                />

            <LinearLayout
                android:id="@+id/social_icons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_below="@id/card_profile_pic"
                android:layout_marginStart="5dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/card_profile_pic"
                app:layout_constraintTop_toBottomOf="@id/card_profile_pic">

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:src="@drawable/mail"
                    />
                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/linkedin"
                    />
                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/facebook"
                    />
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="-3dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/instagram"
                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/card_contact_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_profile_pic"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/social_icons"
                app:layout_constraintTop_toBottomOf="@id/card_profile_pic"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/card_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/email"
                    android:textColor="#474BAC"
                    android:textSize="8sp"/>

                <TextView
                    android:id="@+id/card_linkedin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:layout_marginTop="8dp"
                    android:text="@string/linkedin"
                    android:textColor="#474BAC"
                    android:textSize="8sp"/>

                <TextView
                    android:id="@+id/card_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:layout_marginTop="8dp"
                    android:text="@string/facebook"
                    android:textColor="#474BAC"
                    android:textSize="8sp"/>

                <TextView
                    android:id="@+id/card_instagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:layout_marginTop="8dp"
                    android:text="@string/instagram"
                    android:textColor="#474BAC"
                    android:textSize="8sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_profile_pic"
                android:layout_marginTop="28dp"
                android:layout_marginStart="170dp"
                app:layout_constraintStart_toEndOf="@id/social_icons"
                app:layout_constraintTop_toBottomOf="@id/card_profile_pic"
                android:orientation="vertical">

                <Button
                    android:id="@+id/card_view_connection"
                    android:layout_width="80dp"
                    android:layout_height="20dp"
                    android:text="View Connection"
                    android:textSize="8sp"
                    android:fontFamily="@font/montserrat"
                    android:textAllCaps="false"
                    android:background="@drawable/button_outline_grad"
                    />

                <Button
                    android:id="@+id/card_view_profile"
                    android:layout_width="80dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/viewProfile"
                    android:textSize="10sp"
                    android:fontFamily="@font/montserrat"
                    android:textAllCaps="false"
                    android:background="@drawable/button_outline_grad"
                    />



            </LinearLayout>




        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>